fix(intro): adding some sections

--- a/dedication.tex
+++ b/dedication.tex
@@ -1,3 +1,38 @@
 \chapter*{\centering Dedication}
 \addcontentsline{toc}{chapter}{Dedication}
-% Add your Dedication content here later 
+
+\vspace*{0cm}
+
+\begin{center}
+\begin{minipage}{0.9\textwidth}
+    \begin{center}
+        \itshape\large
+        
+        To the memory of my beloved father, whose guidance and wisdom continue to light my path.\\
+        Though no longer with us, your presence remains in every achievement of my life.\\
+        \vspace{0.8cm}
+        To my loving mother, whose strength and endless support shaped who I am today.\\
+        \vspace{0.5cm}
+        To my sister and brother, whose companionship and encouragement have been constant sources of joy and motivation.\\
+        \vspace{0.5cm}
+        To my little Aryouma, whose innocence and love bring happiness to our family every day.\\
+        \vspace{0.5cm}
+        To Mme Nadia, my professors and mentors, who have guided me with knowledge and patience throughout my academic journey.\\
+        \vspace{0.5cm}
+        To my friends, whose encouragement made this journey worthwhile.\\
+        \vspace{0.8cm}
+        This work is dedicated to all of you, but especially to you, Father.
+    \end{center}
+\end{minipage}
+\end{center}
+
+\vspace{1cm}
+
+\begin{flushright}
+    \begin{minipage}{0.3\textwidth}
+        \centering
+        \includegraphics[width=1\textwidth]{images/Ahmed jaziri signature.png}\\
+    \end{minipage}
+\end{flushright}
+
+\thispagestyle{empty} 
