feat(Acknowledgement): adding Acknowledgement page and some fixes

--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -1,3 +1,69 @@
-\chapter*{\centering Acknowledgement}
-\addcontentsline{toc}{chapter}{Acknowledgement}
-% Add your Acknowledgement content here later 
+\thispagestyle{empty}
+
+
+\begin{center}
+    \begin{minipage}{0.75\textwidth}
+        \begin{center}
+            \Large\textcolor{primary}{\scshape\bfseries Acknowledgement}
+        \end{center}
+    \end{minipage}
+\end{center}
+
+\vspace{1cm}
+
+\begin{center}
+\begin{minipage}{0.75\textwidth}
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{1em}
+
+{\small\itshape With profound gratitude, I acknowledge those whose wisdom and support were instrumental to the Korpor platform's development:}
+
+\vspace{0.5cm}
+
+{\noindent\textbf{\textcolor{primary}{Academic Committee}}\\
+\textbf{Prof. [Name]} \& \textbf{Dr. [Name]} — for their invaluable evaluation and guidance.}
+
+\vspace{0.4cm}
+
+{\noindent\textbf{\textcolor{primary}{Supervisor}}\\
+\textbf{Dr. Nadia Bali} — whose mentorship illuminated the path through complex technological challenges.}
+
+\vspace{0.4cm}
+
+{\noindent\textbf{\textcolor{primary}{Company Leader}}\\
+\textbf{Mr. Khalil Ezouiri} — for his visionary leadership and providing the opportunity to contribute to this innovative platform.}
+
+\vspace{0.4cm}
+
+{\noindent\textbf{\textcolor{primary}{Institution}}\\
+Faculty and staff who fostered an environment of innovation and excellence.}
+
+\vspace{0.7cm}
+
+{\small This work stands as testament to the transformative potential of integrating blockchain security with AI-driven insights to democratize investment opportunities.}
+
+% \vspace{1.2cm}
+
+\begin{flushright}
+\textit{With appreciation,}\\
+\textit{Ahmed Jaziri}\\
+
+% \begin{flushright}
+%     \begin{minipage}{0.26\textwidth}
+%         \centering
+%         \includegraphics[width=1\textwidth]{images/Ahmed jaziri signature.png}\\
+%     \end{minipage}
+% \end{flushright}
+\textcolor{secondary}{\scriptsize\today}
+\end{flushright}
+
+\end{minipage}
+\end{center}
+
+% \vspace{1cm}
+
+\begin{center}
+\textcolor{secondary}{\rule{0.3\textwidth}{0.4pt}}
+\end{center}
+
+\addcontentsline{toc}{chapter}{Acknowledgement} 
