--- a/summary_abstract.tex
+++ b/summary_abstract.tex
@@ -29,14 +29,14 @@
 \textbf{Keywords:} MySQL, Express-Node.js, React, Vite.
 \end{tcolorbox}
 
-\vspace{1.2cm} % Space between sections
+\vspace{2cm} % Space between sections
 
 % Horizontal rule to separate sections
-\begin{center}
-\textcolor{secondary}{\rule{0.7\textwidth}{0.5pt}}
-\end{center}
+% \begin{center}
+% \textcolor{secondary}{\rule{0.7\textwidth}{0.5pt}}
+% \end{center}
 
-\vspace{1.2cm}
+% \vspace{1.2cm}
 
 % Create a more elegant title for Abstract
 \begin{center}
