--- a/chapter2.tex
+++ b/chapter2.tex
@@ -310,6 +310,9 @@ The backlog was created before the sprints to plan the milestones and determine 
     \hline
     \endlastfoot
     
+    % Authentication & User Management section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Authentication \& User Management}}} \\
+    \hline
     PB001 & Authentication & As a user, I want to create an account and authenticate securely & Must \\
     \hline
     PB002 & User Management & As a user, I want to manage my profile information & Must \\
@@ -320,6 +323,9 @@ The backlog was created before the sprints to plan the milestones and determine 
     
     \newpage
     
+    % Super Admin Features section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Super Admin Features}}} \\
+    \hline
     PB005 & Security & As a Super Admin, I want to monitor security and compliance across the platform & Could \\
     \hline
     PB006 & Configuration & As a Super Admin, I want to configure platform-wide features and settings & Could \\
@@ -329,6 +335,10 @@ The backlog was created before the sprints to plan the milestones and determine 
     PB008 & Moderation & As a Super Admin, I want to moderate content across the platform & Won't \\
     \hline
     PB009 & AI Integration & As a Super Admin, I want to chat with an AI assistant that can securely access database information & Could \\
+    \hline
+    
+    % Admin Features section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Admin Features}}} \\
     \hline
     PB010 & Listing Management & As an Admin, I want to manage real estate listings in my company & Must \\
     \hline
@@ -342,6 +352,10 @@ The backlog was created before the sprints to plan the milestones and determine 
     \hline
     PB015 & AI Integration & As an Admin, I want to input property details and receive AI-powered valuation & Should \\
     \hline
+    
+    % Real Estate Agent Features section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Real Estate Agent Features}}} \\
+    \hline
     PB016 & Listing Management & As an Agent, I want to create and manage property listings & Must \\
     \hline
     PB017 & Investment Management & As an Agent, I want to handle investment and purchase requests & Could \\
@@ -351,6 +365,10 @@ The backlog was created before the sprints to plan the milestones and determine 
     PB019 & Customer Relations & As an Agent, I want to maintain client relationships and communications & Could \\
     \hline
     PB020 & Finance & As an Agent, I want to view my commissions on sales and rentals & Should \\
+    \hline
+    
+    % Investor Features section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Investor Features}}} \\
     \hline
     PB021 & Property Discovery & As an Investor, I want to browse available property listings & Must \\
     \hline
@@ -370,6 +388,10 @@ The backlog was created before the sprints to plan the milestones and determine 
     \hline
     PB029 & Finance Management & As an Investor, I want to manage my earnings and withdrawals & Could \\
     \hline
+    
+    % AI & Machine Learning Features section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{AI \& Machine Learning Features}}} \\
+    \hline
     PB030 & AI System & As the System, I want to analyze user interactions for personalized recommendations & Must \\
     \hline
     PB031 & AI Prediction & As the System, I want to predict property valuations and rental prices & Should \\
@@ -379,6 +401,10 @@ The backlog was created before the sprints to plan the milestones and determine 
     PB033 & NLP Integration & As the System, I want to provide real estate legal information via NLP & Could \\
     \hline
     PB034 & Security & As the System, I want to secure AI database access for authorized queries & Could \\
+    \hline
+    
+    % Blockchain & Smart Contract Features section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Blockchain \& Smart Contract Features}}} \\
     \hline
     PB035 & Blockchain & As the System, I want to create and manage virtual contracts for transactions & Must \\
     \hline
@@ -390,6 +416,10 @@ The backlog was created before the sprints to plan the milestones and determine 
     \hline
     PB039 & System Monitoring & As a Super Admin, I want to monitor blockchain health and performance & Should \\
     \hline
+    
+    % System & Security Features section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{System \& Security Features}}} \\
+    \hline
     PB040 & Authentication & As the System, I want to automate authentication and session management & Should \\
     \hline
     PB041 & Notifications & As the System, I want to generate real-time notifications for relevant users & Could \\
@@ -397,6 +427,10 @@ The backlog was created before the sprints to plan the milestones and determine 
     PB042 & Data Consistency & As the System, I want to maintain transaction consistency across the platform & Should \\
     \hline
     PB043 & Security & As the System, I want to ensure secure communication between AI and database & Should \\
+    \hline
+    
+    % DevOps & Infrastructure section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{DevOps \& Infrastructure}}} \\
     \hline
     PB044 & CI/CD & As a Developer, I want CI/CD pipelines to build project images on GitHub & Must \\
     \hline
@@ -415,6 +449,10 @@ The backlog was created before the sprints to plan the milestones and determine 
     PB051 & Monitoring & As an Admin, I want to monitor system health and performance & Could \\
     \hline
     PB052 & Configuration & As a Super Admin, I want to manage environment configurations & Could \\
+    \hline
+    
+    % Mobile App Specific Features section
+    \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Mobile App Specific Features}}} \\
     \hline
     PB053 & Mobile UI/UX & As an Investor, I want a responsive, intuitive mobile interface & Should \\
     \hline
