--- a/rapport.tex
+++ b/rapport.tex
@@ -187,6 +187,7 @@
   enhanced,
   frame hidden,
   boxrule=0mm,
+  borderline west={3.5pt}{0pt}{primary},
   sharp corners,
   breakable,
   left=15pt,
@@ -196,6 +197,18 @@
   toptitle=0pt,
   bottomtitle=0pt,
   colback=white,
+  overlay={
+    % Main accent line
+    \draw[line width=1pt, accent] ([xshift=5pt]frame.north west) -- ([xshift=5pt]frame.south west);
+    
+    % Top decorative elements
+    \fill[accent] ([xshift=0pt,yshift=-3pt]frame.north west) circle (2pt);
+    \draw[line width=0.75pt, accent] ([xshift=7pt,yshift=-5pt]frame.north west) -- ([xshift=15pt,yshift=-5pt]frame.north west);
+    
+    % Bottom decorative elements
+    \fill[accent] ([xshift=0pt,yshift=3pt]frame.south west) circle (2pt);
+    \draw[line width=0.75pt, accent] ([xshift=7pt,yshift=5pt]frame.south west) -- ([xshift=15pt,yshift=5pt]frame.south west);
+  }
 }
 
 \let\origfigure\figure
@@ -214,6 +227,7 @@
   enhanced,
   frame hidden,
   boxrule=0mm,
+  borderline west={3.5pt}{0pt}{primary},
   sharp corners,
   breakable,
   left=15pt,
@@ -223,6 +237,18 @@
   toptitle=0pt,
   bottomtitle=0pt,
   colback=white,
+  overlay={
+    % Main accent line
+    \draw[line width=1pt, accent] ([xshift=5pt]frame.north west) -- ([xshift=5pt]frame.south west);
+    
+    % Top decorative elements
+    \fill[accent] ([xshift=0pt,yshift=-3pt]frame.north west) circle (2pt);
+    \draw[line width=0.75pt, accent] ([xshift=7pt,yshift=-5pt]frame.north west) -- ([xshift=15pt,yshift=-5pt]frame.north west);
+    
+    % Bottom decorative elements
+    \fill[accent] ([xshift=0pt,yshift=3pt]frame.south west) circle (2pt);
+    \draw[line width=0.75pt, accent] ([xshift=7pt,yshift=5pt]frame.south west) -- ([xshift=15pt,yshift=5pt]frame.south west);
+  }
 }
 
 \let\origtable\table
@@ -285,24 +311,13 @@
   \draw[color=accent, line width=0.5pt] (1,0.15) -- (5,-0.15);
 \end{tikzpicture}
 \end{center}
-% \vspace{1.8cm}
 
 % Hide the default "Contents" heading and remove any default horizontal line
 \renewcommand{\contentsname}{}
 \renewcommand{\cftaftertoctitle}{}
 
-\begin{minipage}{\textwidth}
-\begingroup
-\fontsize{11pt}{13pt}\selectfont
+% Return to simple TOC generation
 \tableofcontents
-\endgroup
-\end{minipage}
-
-% Ensure TOC pages have no page numbers -- REMOVED
-% \addtocontents{toc}{\protect\thispagestyle{empty}}
-
-% Add this to make sure the second TOC page also has no page number -- REMOVED
-% \addtocontents{toc}{\protect\afterpage{\protect\thispagestyle{empty}}}
 
 \cleardoublepage
 
@@ -322,7 +337,7 @@
 \cleardoublepage
 
 % Insert page break in TOC before Chapter 3
-\addtocontents{toc}{\protect\newpage}
+% \addtocontents{toc}{\protect\newpage}
 
 % Chapter 3: Design and Implementation
 \input{chapter3.tex}
