fix(sideline): removing the side line from the images and tables

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -127,7 +127,7 @@ Before starting the design and development of any computerized system, it is ess
     \centering
     % Replace with actual image file once available
     % \includegraphics[width=0.85\textwidth]{images/physical_architecture.png}
-    \caption{Physical architecture}
+    \caption{Deployment diagram}
     \label{fig:physical-architecture}
 \end{figure}
 
